# OpenORELLab

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
