[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "openorel"
version = "0.1.0-dev"
description = "OpenORELLab scientific backend"
readme = "../README.md"
requires-python = ">=3.12"

authors = [
    {name = "OpenORELLab Team"}
]

license = {text = "MIT"}

dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "numpy>=2.2",
    "scipy>=1.15",
    "pandas>=2.3",
    "plotly>=6.0",
    "pydantic>=2.11",
    "python-multipart>=0.0.20"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "ruff>=0.12",
    "mypy>=1.17",
    "httpx>=0.28"
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["src"]

testpaths = ["tests"]
